@@ -2028,6 +2028,9 @@ UPDATE `item_template` SET `Flags`=2048 WHERE `entry`=33420;
 -- Trapped Prey (Quest: Preying Upon the Weak (Id: 11292))
 UPDATE `item_template` SET `Flags`=2048 WHERE `entry`=33487;
 
+-- Winterfin Clam (Quest: Winterfin Commerce (Id: 11559))
+UPDATE `item_template` SET `Flags`=2048 WHERE `entry`=34597;
+
 -- Icy Core (Quest: Spirits of the Ice (Id: 11313))
 UPDATE `item_template` SET `Flags`=2048 WHERE `entry`=33605;
 
